--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -48,7 +48,7 @@
 }
 
 @mixin contenedor {
-    width: min(95%, 120rem);
+    width: min(95%, 160rem);
     margin: 0 auto;
 }
 
@@ -67,4 +67,24 @@
     @include headings;
     margin: 6rem 0 3rem 0;
     text-align: center;
+}
+
+@mixin texto-fluido($minimo, $maximo) {
+    font-size: clamp($minimo,-0.8rem + 10vw, $maximo);
+}
+
+@mixin texto-degradado($inicio, $final) {
+    background: linear-gradient(to right, $inicio, $final);
+    background-clip: text;
+    color: transparent;
+}
+
+@mixin logo {
+    color: v.$blanco;
+    text-align: center;
+    margin-bottom: 2rem;
+    @include desktop {
+        text-align: left;
+        margin: 0;
+    }
 }
