--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -88,3 +88,40 @@
         margin: 0;
     }
 }
+
+@mixin menu-social($color, $size) {
+    &__enlace {
+
+        &::before {
+            color: $color;
+            font-size: $size;
+            display: inline-block;
+            font-style: normal;
+            text-rendering: auto;
+            -webkit-font-smoothing: antialiased;
+            font-family: "Font Awesome 6 Brands";
+        }
+
+        &[href*="https://github.com"]::before {
+            content: "\f09b";
+        }
+        &[href*="https://instagram.com"]::before {
+            content: "\f16d";
+        }
+        &[href*="https://youtube.com"]::before {
+            content: "\f167";
+        }
+        &[href*="https://twitter.com"]::before {
+            content: "\f099";
+        }
+        &[href*="https://linkedin.com"]::before {
+            content: "\f0e1";
+        }
+
+
+    }
+
+    &__ocultar {
+        display: none;
+    }
+}
