--- a/src/scss/UI/formulario/_acciones.scss
+++ b/src/scss/UI/formulario/_acciones.scss
@@ -1,4 +1,5 @@
 @use 'base/variables' as v;
+@use 'base/mixins' as m;
 
 .acciones {
     margin-top: 3rem;
@@ -9,5 +10,9 @@
         color: v.$negro;
         font-size: 1.4rem;
         font-weight: v.$delgada;
+    }
+
+    &__confirmado {
+        @include m.boton(v.$azul, v.$blanco);
     }
 }
