--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -125,3 +125,16 @@
         display: none;
     }
 }
+
+@mixin enlace {
+    all: unset;
+    cursor: pointer;
+    color: v.$blanco;
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    font-weight: v.$bold;
+
+    &:hover {
+        color: v.$azul;
+    }
+}
