--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -14,8 +14,8 @@ $secundario: #00c8c2;
 $negro: #1a1b15;
 $blanco: #FFFFFF;
 $gris: #64748B;
-$gris-claro: #F8FAFC;
-$gris-oscuro: #1E293B;
+$grisClaro: #F8FAFC;
+$grisOscuro: #1E293B;
 
 $rojo: rgb(169, 0, 0);
 $verde: #02db02;
