--- a/src/scss/UI/formulario/_formulario.scss
+++ b/src/scss/UI/formulario/_formulario.scss
@@ -4,12 +4,43 @@
 .formulario {
     display: flex;
     flex-direction: column;
+
+    &__fieldset {
+        border: none;
+        margin-top: 1rem;
+        padding: 0;
+    }
     
+    &__legend {
+        color: v.$gris;
+        font-size: 2.2rem;
+        margin-bottom: 2rem;
+    }
+
     &__campo {
         display: flex;
         flex-direction: column;
         gap: 1rem;
         margin: 1.5rem 0;
+    }
+
+    &__contenedor-icono {
+        display: flex;
+        border-radius: .5rem;
+        overflow: hidden;
+    }
+
+    &__icono {
+        background-color: v.$grisOscuro;
+        width: 4rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        i {
+            color: v.$blanco;
+            font-size: 2rem;
+        }
     }
 
     &__label {
@@ -22,9 +53,26 @@
         padding: 1rem;
         border: 1px solid darken($color: v.$gris, $amount: 20);
         border-radius: .5rem;
+        width: 100%;
+
+        &--sociales {
+            @extend .formulario__input;
+            flex: 1;
+            border-top-left-radius: 0;
+            border-bottom-left-radius: 0;
+        }
+
+        &--file {
+            border: none;
+        }
     }
 
     &__submit {
         @include m.boton(v.$azul, v.$blanco);
+
+        &--registrar {
+            width: 100%;
+            margin-top: 1rem;
+        }
     }
 }
