--- a/src/scss/admin/_dashboard.scss
+++ b/src/scss/admin/_dashboard.scss
@@ -42,18 +42,27 @@
 
     &__grid {
         display: flex;
-        flex: 1;
+        flex-direction: column;
+        @include m.tablet {
+            flex-direction: row;
+            flex: 1;
+        }
     }
 
     &__sidebar {
+        display: none;
         background-color: lighten($color: v.$grisOscuro, $amount: 10);
-        width: 12rem;
+        @include m.tablet {
+            display: flex;
+            flex-direction: column;
+            width: 12rem;   
+        }
     }
 
     &__menu {
-        padding: 1rem;
         display: flex;
         flex-direction: column;
+        padding: 1rem;
         gap: 1rem;
     }
 
@@ -91,4 +100,53 @@
             padding: 1rem 5rem 3rem 5rem;
         }
     }
+
+    &__contenedor-boton {
+        @include m.tablet {
+            display: flex;
+            justify-content: flex-end;
+            margin-bottom: 5rem;
+        }
+    }
+
+    &__boton {
+        @include m.boton(v.$azul, v.$blanco);
+        text-transform: uppercase;
+        font-size: 1.4rem;
+        @include m.tablet {
+            width: auto;
+        }
+    }
+
+    &__contenedor {
+        @include m.shadow;
+        background-color: v.$blanco;
+        padding: 2rem;
+        border-radius: 1rem;
+    }
+
+    &__formulario {
+        @extend .dashboard__contenedor;
+        @include m.contenedor-md;
+        margin-top: 2rem;
+    }
+
+    &__hamburguesa {
+        @include m.tablet {
+            display: none;
+        }
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+
+        &--icono {
+            width: 5rem;
+        }
+    }
+}
+
+.mostrar {
+    display: flex;
+    flex-direction: column;
 }
