--- a/src/scss/admin/_dashboard.scss
+++ b/src/scss/admin/_dashboard.scss
@@ -46,6 +46,7 @@
         @include m.tablet {
             flex-direction: row;
             flex: 1;
+            overflow-y: auto;
         }
     }
 
@@ -97,6 +98,7 @@
         padding: 1rem 1rem 3rem 1rem;
         width: 100%;
         @include m.tablet {
+            overflow-y: scroll;
             padding: 1rem 5rem 3rem 5rem;
         }
     }
