--- a/src/scss/UI/formulario/_formulario.scss
+++ b/src/scss/UI/formulario/_formulario.scss
@@ -49,7 +49,8 @@
         color: rgba($color: v.$negro, $alpha: .8);
     }
 
-    &__input {
+    &__input,
+    &__select {
         padding: 1rem;
         border: 1px solid darken($color: v.$gris, $amount: 20);
         border-radius: .5rem;
@@ -69,6 +70,11 @@
 
     &__texto {
         margin-top: 3rem;
+    }
+
+    &__radio {
+        display: flex;
+        gap: 2rem;
     }
 
     &__imagen {
