Horas: Seleccion de horas y dias finalizados

--- a/src/scss/admin/_paginacion.scss
+++ b/src/scss/admin/_paginacion.scss
@@ -32,6 +32,7 @@
             border-radius: .5rem;
             border: 1px solid v.$grisOscuro;
             color: v.$grisOscuro;
+            opacity: .6;
         }
 
         &--numero {
