--- a/src/scss/UI/formulario/_horas.scss
+++ b/src/scss/UI/formulario/_horas.scss
@@ -15,5 +15,19 @@
         border-radius: 1rem;
         padding: 1rem;
         text-align: center;
+    
+        &--seleccionada {
+            @extend .horas__hora;
+            background-color: v.$azul;
+            color: v.$blanco;
+        }
+
+        &--deshabilitada {
+            @extend .horas__hora;
+            cursor: not-allowed;
+            border: 1px solid v.$gris;
+            color: v.$gris;
+            opacity: .5rem;
+        }
     }
 }
