Eventos: Responsive a mobiles

--- a/src/scss/admin/_dashboard.scss
+++ b/src/scss/admin/_dashboard.scss
@@ -125,6 +125,56 @@
         background-color: v.$blanco;
         padding: 2rem;
         border-radius: 1rem;
+
+        &--eventos {
+            display: none;
+            @include m.tablet {
+                display: flex;
+            }
+        }
+
+        &--mobile {
+            @include m.tablet {
+                display: none;
+            }
+
+            &__h3 {
+                display: inline-block;
+                margin: 2rem 0 0 0;
+                background-color: v.$azul;
+                border-radius: .5rem;
+                border-bottom-left-radius: 0;
+                border-bottom-right-radius: 0;
+                color: v.$blanco;
+                padding: 1.4rem;
+            }
+
+            &__evento {
+                padding-top: 1rem;
+                border-radius: .5rem;
+                border-top-left-radius: 0;
+                border: 1px solid v.$azul;
+                background-color: darken($color: v.$grisClaro, $amount: 3%);
+            }
+
+            &__label {
+                margin: 1rem 0 0 1.3rem;
+                text-transform: uppercase;
+                font-size: 1.6rem;
+                font-weight: v.$bold;
+                color: v.$azul;
+            }
+            
+            &__p {
+                margin-left: 1.3rem;
+            }
+
+            &__botones {
+                display: flex;
+                justify-content: space-between;
+                margin: 0.9rem;
+            }
+        }
     }
 
     &__formulario {
