--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -74,6 +74,14 @@
     text-align: center;
 }
 
+@mixin descripcion-pagina {
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: v.$delgada;
+    color: v.$grisOscuro;
+    margin-bottom: 5rem;
+}
+
 @mixin texto-fluido($minimo, $maximo) {
     font-size: clamp($minimo,-0.8rem + 10vw, $maximo);
 }
