--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -179,3 +179,14 @@
         color: v.$blanco;
     }
 }
+
+@mixin card {
+    border: 1px solid lighten($color: v.$gris, $amount: 10%);
+    padding: 3rem;
+
+    &__nombre {
+        font-weight: v.$black;
+        font-size: 2.6rem;
+        margin: 2rem 0;
+    }
+}
