--- a/src/scss/paginas/_paquetes.scss
+++ b/src/scss/paginas/_paquetes.scss
@@ -38,7 +38,7 @@
 
     &__precio {
         font-size: 3rem;
-        margin: 3rem 0 0 0;
+        margin: 3rem 0;
         color: v.$azul;
         font-weight: v.$black;
         text-align: center;
