--- a/src/scss/UI/formulario/_formulario.scss
+++ b/src/scss/UI/formulario/_formulario.scss
@@ -93,7 +93,8 @@
     &__submit {
         @include m.boton(v.$azul, v.$blanco);
 
-        &--registrar {
+        &--registrar,
+        &--full {
             width: 100%;
             margin-top: 1rem;
         }
