--- a/src/scss/registro/_registro.scss
+++ b/src/scss/registro/_registro.scss
@@ -46,14 +46,60 @@
 }
 
 .registro {
-    @include m.tablet {
-        flex: 0 0 40%;
-        position: -webkit-sticky;
-        position: sticky;
-        top: 3rem;
+    &--pago {
+        @include m.tablet {
+            flex: 0 0 40%;
+            position: -webkit-sticky;
+            position: sticky;
+            top: 3rem;
+        }
+    }
+
+    &__evento {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1rem;
+        &:nth-child(even) {
+            background-color: darken(v.$grisClaro, 3);
+        }
     }
 
     &__heading {
         margin: 3rem 0 3rem 0;
+    }
+
+    &__nombre {
+        font-size: 2rem;
+        font-weight: v.$bold;
+        margin: 0;
+    }
+
+    &__eliminar {
+        all: unset;
+        color: v.$rojo;
+
+        &:hover {
+            cursor: pointer;
+        }
+    }
+
+    &__regalo {
+        margin-top: 3rem;
+    }
+
+    &__label {
+        display: block;
+        font-size: 2.2rem;
+        font-weight: v.$bold;
+        margin-bottom: 1rem;
+    }
+
+    &__select {
+        width: 100%;
+        background-color: v.$blanco;
+        border: 1px solid v.$gris;
+        padding: 1rem;
+        border-radius: .5rem;
     }
 }
