--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -198,3 +198,7 @@
         margin: 2rem 0;
     }
 }
+
+@mixin bg-gradient($bgColor) {
+    background-image: linear-gradient(to left top, $bgColor, lighten($bgColor, 15%));
+}
