--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -12,6 +12,7 @@ html {
 body {
     font-family: v.$fuente_principal;
     font-size: 1.8rem;
+    overflow-x: none;
 }
 a {
     text-decoration: none;
