--- a/src/scss/UI/formulario/_acciones.scss
+++ b/src/scss/UI/formulario/_acciones.scss
@@ -2,9 +2,15 @@
 @use 'base/mixins' as m;
 
 .acciones {
-    margin-top: 3rem;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    gap: 3rem;
+    margin-top: 3rem;
+    @include m.tablet {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    
 
     &__enlace {
         color: v.$negro;
