--- a/src/scss/UI/header/_navegacion.scss
+++ b/src/scss/UI/header/_navegacion.scss
@@ -4,8 +4,10 @@
 .navegacion {
     display: flex;
     flex-direction: column;
+    gap: 1rem;
     @include m.desktop {
         flex-direction: row;
+        gap: 0;
     }
 
     &__enlace {
