--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -5,6 +5,7 @@ html {
     font-size: 62.5%;
     box-sizing: border-box;
     height: 100%;
+    overflow-x: hidden;
 }
 *, *:before, *:after {
     box-sizing: inherit;
@@ -12,7 +13,7 @@ html {
 body {
     font-family: v.$fuente_principal;
     font-size: 1.8rem;
-    overflow-x: none;
+    overflow-x: hidden;
 }
 a {
     text-decoration: none;
